# P11-Implement-a-data-processing-workflow-in-a-cloud-based-big-data-environment.

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: apprentissages.md
notebooks/: notebook2026.ipynb
scripts/: bootstrap.sh  pyspark_job.py
