[project]
name = "p11-implement-a-data-processing-workflow-in-a-cloud-based-big-data-environment-"
version = "0.1.0"
description = "Big Data project using PySpark and Tensorflow"
authors = [
    {name = "Laetitia Ikusawa",email = "laetdi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "tensorflow-macos (==2.13.0)",
    "tensorflow-metal (>=1.2.0,<2.0.0)",
    "pyspark (==3.5.3)"
]

[tool.poetry]
packages = [{include = "p11_implement_a_data_processing_workflow_in_a_cloud_based_big_data_environment"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
