[project]
name = "implement-a-data-processing-workflow"
version = "0.1.0"
description = "Big Data project using PySpark and Tensorflow"
authors = [
    {name = "Laetitia Ikusawa",email = "laetdi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pyspark (==3.5.3)",
    "pandas (==2.2.3)",
    "numpy (==1.26.4)",
    "typing-extensions (>=4.6.1)",
    "pillow (>=12.1.1,<13.0.0)",
    "tensorflow (>=2.21.0,<3.0.0)",
    "kaggle (>=1.6.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pyarrow (>=4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "implement-a-data-processing-workflow"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]
